--- a/index.html
+++ b/index.html
@@ -417,6 +417,11 @@
 						<aside class="widget clearfix widget_text"> 
 							<div class="textwidget">
 								<p>
+									<!--
+									<center>
+										<a class="btn btn-lg btn-primary" target="_blank" href="https://themeforest.net/item/certy-wordpress-resume-cv-theme/19915727?ref=PX-lab" rel="noopener">SCARICA CV</a>
+									</center>
+									-->
 									<center>
 										<a class="btn btn-lg btn-primary" target="_blank" href="https://themeforest.net/item/certy-wordpress-resume-cv-theme/19915727?ref=PX-lab" rel="noopener">SCARICA CV</a>
 									</center>
@@ -462,24 +467,7 @@
 											</span>
 										</a>
 									</li>
-									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-54">
-										<a href="#contact" data-tooltip="Contact">
-											<span class="crt-icon crt-icon-contact">
-											</span>
-										</a>
-									</li>
-									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-53">
-										<a href="#cases" data-tooltip="Cases">
-											<span class="crt-icon crt-icon-experience">
-											</span>
-										</a>
-									</li>
-									<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-53">
-										<a href="#cases" data-tooltip="Cases">
-											<span class="crt-icon crt-icon-experience">
-											</span>
-										</a>
-									</li>
+
 								</ul>
 							</nav>
 						</div>
@@ -506,7 +494,7 @@
 									<div class="col-sm-12 clear-mrg text-box">
 										<h2 class="title-lg text-upper">About Me</h2>
 										<p style="text-align: justify;">
-											Gianmaria Previtera, laureando al Politecnico di Bari- Facoltà di Ingegneria elettronica, con competenze in ambito sistemistico e sviluppo software e web. Aperto a nuove esperienze ed a lavoro di gruppo. Ho oltre 10 anni di esperienza su server Linux e sulla manutenzione e riparazione di computer e Mac. Ho buone competenze su hypervisor di livello 1 (VmWare ESXI) e nel tempo libero cerco di aggiornarmi
+											Gianmaria Previtera, laureando al Politecnico di Bari- Facoltà di Ingegneria elettronica, con competenze in ambito sistemistico e sviluppo software e web.</br> Mi occupo di sistemi di rete da quasi 10 anni, in ruoli diversi e dal 2009 in particolare ho curato la gestione e la manutenzione di rete di piccole e medie aziende con sistemi operativi differenti, risolvendo tempestivamente i problemi che si sono verificati nel corso del tempo.</br> Lavoro bene sia con adulti che con giovani e sono una persona pro attiva al cambiamento, riuscendo ad adattarsi facilmente a situazioni nuove. Sono capace di effettuare piccole riparazioni sia hardware che software e se richiesto riesco ad agire in totale autonomia.
 										</p>
 										<br/>
 									</div>
@@ -627,16 +615,17 @@
 									
 									<div class="col-sm-6 clear-mrg">
 										<h3 class="title-thin text-muted">Sistemi operativi noti</h3>
+										<p>-<strong>Linux server (debian e derivate)</strong></p>
 										<p>-<strong>Windows 10</strong></p>
-										<p>-<strong>Linux</strong></p>
 										<p>-<strong>MacOS</strong></p>				
 									</div>
 									<div class="col-sm-6 clear-mrg">
 										<h3 class="title-thin text-muted">Soft Skills</h3>
-										<p>-<strong>Windows 10</strong></p>
-										<p>-<strong>Linux</strong></p>
-										<p>-<strong>MacOS</strong></p>
-										<p>-<strong>MacOS</strong></p>	
+										<p>-<strong>Problem Solving</strong></p>
+										<p>-<strong>Creatività</strong></p>
+										<p>-<strong>Flessibilità/Adattabilità</strong></p>
+										<p>-<strong>Gestione Dello Stress</strong></p>	
+										<p>-<strong>Team work</strong></p>	
 									</div>
 
 								</div>
@@ -649,14 +638,22 @@
 										<div class="row ">
 											<div class="col-xs-4 text-center">
 												<div class="progress-chart crt-animate">
-													<div class="progress-bar" data-text="CSS" data-value="0.42">
+													<div class="progress-bar" data-text="HTML" data-value="0.7">
+													</div>
+													<strong class="progress-title"></strong>
+												</div>
+											</div>
+
+											<div class="col-xs-4 text-center">
+												<div class="progress-chart crt-animate">
+													<div class="progress-bar" data-text="PHP" data-value="0.56">
 													</div>
 												</div>
 												<strong class="progress-title"></strong>
 											</div>
 											<div class="col-xs-4 text-center">
 												<div class="progress-chart crt-animate">
-													<div class="progress-bar" data-text="PHP" data-value="0.56">
+													<div class="progress-bar" data-text="CSS" data-value="0.42">
 													</div>
 													<strong class="progress-title"></strong>
 												</div>
@@ -668,14 +665,6 @@
 													<strong class="progress-title"></strong>
 												</div>
 											</div>
-											<div class="col-xs-4 text-center">
-												<div class="progress-chart crt-animate">
-													<div class="progress-bar" data-text="HTML" data-value="0.7">
-													</div>
-													<strong class="progress-title"></strong>
-												</div>
-											</div>
-
 											<div class="col-xs-4 text-center">
 												<div class="progress-chart crt-animate">
 													<div class="progress-bar" data-text="SQL" data-value="0.2">
