--- a/index.html
+++ b/index.html
@@ -367,10 +367,10 @@
 								<div class="crt-card-avatar">
 									<span class="crt-avatar-state">
 										<span class="crt-avatar-state1">
-											<img class="avatar avatar-195" alt="" src="Foto.png">
+											<img class="avatar avatar-195" alt="" src="foto.png">
 										</span>
 										<span class="crt-avatar-state2">
-											<img class="avatar avatar-195" alt="" src="Foto.png">
+											<img class="avatar avatar-195" alt="" src="foto.png">
 										</span>
 									</span>
 								</div>
