--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 									</center>
 									-->
 									<center>
-										<a class="btn btn-lg btn-primary" target="_blank" href="https://themeforest.net/item/certy-wordpress-resume-cv-theme/19915727?ref=PX-lab" rel="noopener">SCARICA CV</a>
+										<a class="btn btn-lg btn-primary" target="_blank" href="" rel="noopener">SCARICA CV</a>
 									</center>
 								</p>
 							</div>
