--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 									</center>
 									-->
 									<center>
-										<a class="btn btn-lg btn-primary" target="_blank" href="CV.pdf" rel="noopener">SCARICA CV</a>
+										<a class="btn btn-lg btn-primary" target="_blank" href="https://github.com/GianmariaPrevitera/gianmariaprevitera.github.io/raw/main/CV.pdf" rel="noopener">SCARICA CV</a>
 									</center>
 								</p>
 							</div>
