--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
 									<h5>Conseguita nel 2012</h5>
 								</li>
 								<li style="text-align:center;width: 32%;" >
-									<img width="107" height="111" src="CFU.png" class=" wp-post-image" loading="lazy" /> 
+									<img width="107" height="111" src="img/CFU.png" class=" wp-post-image" loading="lazy" /> 
 									<h5>Conseguita nel 2022</h5>
 								</li>
 
