--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 								<div class="col-sm-12 clear-mrg text-box">
 									<h2 class="title-lg text-upper">About Me</h2>
 									<p style="text-align: justify;">
-									Gianmaria Previtera, laureando al Politecnico di Bari- Facoltà di Ingegneria elettronica, con competenze in ambito sistemistico e sviluppo software e web.</br> Mi occupo di sistemi di rete da quasi 10 anni, in ruoli diversi e dal 2009 in particolare ho curato la gestione e la manutenzione di rete di piccole e medie aziende con sistemi operativi differenti, risolvendo tempestivamente i problemi che si sono verificati nel corso del tempo.</br> Lavoro bene sia con adulti che con giovani e sono una persona pro attiva al cambiamento, riuscendo ad adattarsi facilmente a situazioni nuove. Sono capace di effettuare piccole riparazioni sia hardware che software e se richiesto riesco ad agire in totale autonomia.
+									Gianmaria Previtera, laureando al Politecnico di Bari- Facoltà di Ingegneria elettronica, con competenze in ambito sistemistico e sviluppo software web.</br> Mi occupo di sistemi di rete da quasi 10 anni, in ruoli diversi e dal 2009 in particolare ho curato la gestione e la manutenzione di rete di piccole e medie aziende con sistemi operativi differenti, risolvendo tempestivamente i problemi che si sono verificati nel corso del tempo.</br> Lavoro bene sia con adulti che con giovani e sono una persona pro attiva al cambiamento, riuscendo ad adattarsi facilmente a situazioni nuove. Sono capace di effettuare piccole riparazioni sia hardware che software e se richiesto riesco ad agire in totale autonomia.
 								</p>
 								<br/>
 							</div>
@@ -515,7 +515,7 @@
 									<dt class="text-upper" style="width: 120px;">Nato il</dt>
 									<dd>06 Ago 1991</dd>
 									<dt class="text-upper" style="width: 120px;">Residente a</dt>
-									<dd>Crotone (KR), Italia IT</dd>
+									<dd>Milano (MI), Italia IT</dd>
 									<dt class="text-upper" style="width: 120px;">e-mail</dt>
 									<dd>
 										<a href="mailto:prev.gianmaria@gmail.com?subject=Offerta di lavoro">prev.gianmaria@gmail.com</a>
@@ -562,12 +562,12 @@
 										</span>
 										<span class="bullet fill">
 										</span>
-										<span class="bullet">
+										<span class="bullet fill">
 										</span>
 										<span class="bullet">
 										</span>
 									</span>
-									<span class="progress-text text-muted">B1 Certificato</span>
+									<span class="progress-text text-muted">B2 Certificato</span>
 								</div>
 							</div>
 						</div>
@@ -583,8 +583,8 @@
 									<h5>Conseguita nel 2010</h5>
 								</li>
 								<li style="text-align:center;width: 32%;" >
-									<img width="107" height="111" src="img/EnglishB1.png" class=" wp-post-image" loading="lazy" /> 
-									<h5>Conseguita nel 2012</h5>
+									<img width="107" height="111" src="img/EnglishB2.png" class=" wp-post-image" loading="lazy" /> 
+									<h5>Conseguita nel 2022</h5>
 								</li>
 								<li style="text-align:center;width: 32%;" >
 									<img width="107" height="111" src="img/CFU.png" class=" wp-post-image" loading="lazy" /> 
@@ -612,12 +612,16 @@
 												<p>-<strong>Webserver: Apache</strong></p>
 												<p>-<strong>Mailserver: Postfix, Sendmail</strong></p>
 												<p>-<strong>Strategie di backup più utilizzati</strong></p>
+												<p>-<strong>Cisco Jabber</strong></p>
+												<p>-<strong>Cisco Finesse</strong></p>
 											</div>
 											<div class="col-xs-6">
 												<p>-<strong>Firewall: IPFW (Unix), iptables, pfsense</strong></p>
 												<p>-<strong>DNS: Pi-Hole (DNS con antispam)</strong></p>
 												<p>-<strong>Hypervisor: VMWare EXSI</strong></p>
 												<p>-<strong>Database MySQL</strong></p>
+												<p>-<strong>Cisco Unified Communications Manager</strong></p>
+												<p>-<strong>Splunk</strong></p>												
 											</div>
 										</div>
 									</div>
@@ -705,6 +709,19 @@
 								<div class="education">
 									<div class="education-box">
 										<span class="education-date">
+											<span>2022-Oggi</span>
+										</span>
+										<h3>
+											HP Enterprise Cloud Solution Design
+										</h3>
+										<span class="education-company">Infrastructure Support Specialist per Intesa San Paolo</span>
+										<p style="text-align: justify;">
+											Supporto infrastruttura di call centering basata su tecnologie CISCO IPCC
+										</p>
+
+									</div>
+									<div class="education-box">
+										<span class="education-date">
 											<span>2010-2021</span>
 										</span>
 										<h3>
@@ -745,6 +762,9 @@
 								<h2 class="title-lg text-upper">Formazione</h2>
 								
 								<div class="education">
+
+
+
 									<div class="education-box">
 										<span class="education-date">
 											<span>2010</span>
@@ -770,6 +790,7 @@
 										</h3>
 										<span class="education-company">presso Università della Calabria</span>
 									</div>
+
 									<div class="education-box">
 										<span class="education-date">
 											<span>2016</span>
@@ -781,6 +802,17 @@
 									</div>
 
 
+									
+									<div class="education-box">
+										<span class="education-date">
+											<span>2022</span>
+										</span>
+										<h3 style="margin-bottom: 0px;">
+											Certificazione ESOL English Lv.B2
+										</h3>
+										<span class="education-company">British School Crotone</span>
+									</div>
+
 									<div class="education-box">
 										<span class="education-date">
 											<span>In corso</span>
@@ -790,13 +822,8 @@
 										</h3>
 										<span class="education-company">presso Politecnico di Bari</span>
 									</div>
-									<div class="education-box">
-										<h3 style="margin-bottom: 0px;">
-											Certificazione Inglese B2
-										</h3>
-										<span class="education-company">presso British School Crotone</span>
-									</div>
 								</div>
+
 							</section>
 						</div>
 					</div>
