--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
 											<span>2022-Oggi</span>
 										</span>
 										<h3>
-											HP Enterprise Cloud Solution Design
+											HP Enterprise Customer Delivery Services
 										</h3>
 										<span class="education-company">Infrastructure Support Specialist per Intesa San Paolo</span>
 										<p style="text-align: justify;">
