--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
 												<span>2023</span>
 											</span>
 											<h3 style="margin-bottom: 0px;">
-												Laurea Ingegneria Elettronica
+												Laurea Ingegneria Elettronica & Telecomunicazioni
 											</h3>
 											<span class="education-company">presso Politecnico di Bari</span>
 										</div>
