--- a/index.html
+++ b/index.html
@@ -486,6 +486,7 @@
 												</div>
 												<div class="col-xs-6">
 													<p>-<strong>Firewall: IPFW (Unix), iptables, pfsense</strong></p>
+													<p>-<strong>Load Balancer</strong></p>
 													<p>-<strong>DNS: Pi-Hole (DNS con antispam)</strong></p>
 													<p>-<strong>Hypervisor: VMWare EXSI</strong></p>
 													<p>-<strong>Database MySQL</strong></p>
@@ -609,11 +610,15 @@
 												<span><img width="80" height="80" src="img/Sielte.png" class="wp-post-image" loading="lazy"  /></span>
 											</span>
 											<h3>
-												Sielte S.P.A
+												Sielte S.P.A - 06/2023 - Adesso
 											</h3>
-											<span class="education-company">Network Operator in consulenza per FastWeb</span>
+											<span class="education-company">Network Operator L2 in consulenza per FastWeb</span>
 											<p style="text-align: justify;">
-												Operatore NOC di secondo livello per il supporto e gesione dell'infrastruttura FastWeb per lo Small Business
+												In questa azienda mi occupo di tutta la porzione di rete che porta la connessione ad internet fino al cliente finale in base alla tecnologia di attivazione del cliente (GPON, FTTH, VULA), inclusa la configurazione della CPE (Aethra, ADB, Hauwei) in base alla tecnologia del cliente (ACL, MANAGEMENT, QOS) ed alla richiesta del cliente (NAP, PAT). La configuarzione lato CPE viene fatta anche sulla parte fonia del cliente (SIP con pots, SIP con ISDN, IPCX e UCC).
+												La configurazione del centralino virtuale UCC viene fatta tramite portale proprietario fastweb ma è basato su tecnologia CISCO UCCE
+											</p>
+											<p style="text-align: justify;">
+												Portale Ticket: Remedy
 											</p>
 
 										</div>
@@ -626,11 +631,14 @@
 												<span><img width="80" height="80" src="img/cds.png" class="wp-post-image" loading="lazy"  /></span>
 											</span>
 											<h3>
-												HP Enterprise Customer Delivery Services
+												HP Enterprise Customer Delivery Services - 01/2022 - 06/2023
 											</h3>
 											<span class="education-company">Infrastructure Support Specialist in consulenza per Intesa San Paolo</span>
 											<p style="text-align: justify;">
-												Supporto infrastruttura di call centering basata su tecnologie CISCO IPCC
+												In questa azienda mi sono occupato del supporto infrastruttura di call centering basata su tecnologie CISCO UCCE, gestione IVR (modifica schedulazioni, orari apertura e chiusura delle singole sedi, inserimento messaggi vocali), Reportistica CUIC, CUSP e CUCM (Cisco Unified Communications Manager, creazione, modifica e cancellazione di Agenti e Skills), Cisco Jabber 
+											</p>
+											<p style="text-align: justify;">
+												Portale Ticket: Service Now (SNOW)
 											</p>
 
 										</div>
@@ -639,7 +647,7 @@
 												<span><img width="80" height="80" src="img/Athena.png" class="wp-post-image" loading="lazy"  /></span>
 											</span>
 											<h3>
-												Atena SRL
+												Atena SRL - 2010-2021
 											</h3>
 											<p style="text-align: justify;">
 												In questa azienda mi sono occupato della manutenzione dei pc sia windows che Mac e della gestione del server.
@@ -654,7 +662,7 @@
 												<span><img width="80" height="80" src="img/SmartHospital.png" class="wp-post-image" loading="lazy"  /></span>
 											</span>
 											<h3>
-												Smart Hospital TA
+												Smart Hospital TA - 2009-2010
 											</h3>
 											<p style="text-align: justify;">Per questa azienda ho realizzato un gestionale web based utilizzando javascript e php. Il server aziendale è basato su CentOS con web server Apache, database MySQL e il backup dei dati aziendali viene realizzata su RAID5 </p>
 										</div>
