--- a/index.html
+++ b/index.html
@@ -614,12 +614,16 @@
 											</h3>
 											<span class="education-company">Network Operator L2 in consulenza per FastWeb</span>
 											<p style="text-align: justify;">
-												In questa azienda mi occupo di tutta la porzione di rete che porta la connessione ad internet fino al cliente finale in base alla tecnologia di attivazione del cliente (GPON, FTTH, VULA), inclusa la configurazione della CPE (Aethra, ADB, Hauwei) in base alla tecnologia del cliente (ACL, MANAGEMENT, QOS) ed alla richiesta del cliente (NAP, PAT). La configuarzione lato CPE viene fatta anche sulla parte fonia del cliente (SIP con pots, SIP con ISDN, IPCX e UCC).
-												La configurazione del centralino virtuale UCC viene fatta tramite portale proprietario fastweb ma è basato su tecnologia CISCO UCCE
+												Gestione ticket ed interventi onsite per clienti small business Fastweb (Operation SME) tramite client Remedy<br>
+												• Configurazione e troubleshooting router Aethra, ADB, Cisco e Huawei<br>
+												• Troubleshooting su linee di accesso Faswteb (ADSL, VDSL, FTTC, VULA, Metroring, GPON)<br>
+												• Troubleshooting su apparati di accesso Alcatel, Nokia-Siemens, Huawei <br>
+												• Configurazione switch installati in sede cliente per servizi VOIP di vendor Cisco, Huawei, ZTE<br>
+												• Configurazione SIP e VOIP su router cliente <br>
+												• Assitenza clienti per configurazione su centralini virtuali Fastweb IPCX e UCC<br>
+												• Assistenza per Interventi con tecnici Onsite<br>
 											</p>
-											<p style="text-align: justify;">
-												Portale Ticket: Remedy
-											</p>
+
 
 										</div>
 
@@ -635,11 +639,20 @@
 											</h3>
 											<span class="education-company">Infrastructure Support Specialist in consulenza per Intesa San Paolo</span>
 											<p style="text-align: justify;">
-												In questa azienda mi sono occupato del supporto infrastruttura di call centering basata su tecnologie CISCO UCCE, gestione IVR (modifica schedulazioni, orari apertura e chiusura delle singole sedi, inserimento messaggi vocali), Reportistica CUIC, CUSP e CUCM (Cisco Unified Communications Manager, creazione, modifica e cancellazione di Agenti e Skills), Cisco Jabber 
+												Gestione ticket per Intesa San Paolo tramite client Service Now<br>
+												• Configurazione e troubleshooting Cisco UCCE<br>
+												• Configurazione IVR con WhiteList e schedulazioni con Cisco Script Editor<br>
+												• Reportistica Cisco CUIC<br>
+												• Configurazione Cisco CVP<br>
+												• Configurazione Cisco Unified Call Studio<br>
+												• Gestione di Campagne attraverso Cisco Social Miner<br>
+												• Configurazione Agenti e Skills su Cisco Configuration Manager sia singoli che in Bulk<br>
+												• Ricerca chiamate su database MySQL e registrate su portale ASC technologies<br>
+												• Configurazione e troubleshooting Cisco Jabber<br>
+												• Migrazione da ambiente di test in produzione<br>
+												• Aggiornamento certificati SSL TomCat tramite CSR<br>
 											</p>
-											<p style="text-align: justify;">
-												Portale Ticket: Service Now (SNOW)
-											</p>
+
 
 										</div>
 										<div class="education-box">
@@ -649,9 +662,13 @@
 											<h3>
 												Atena SRL - 2010-2021
 											</h3>
+											<span class="education-company">Sistemista di rete</span>
 											<p style="text-align: justify;">
-												In questa azienda mi sono occupato della manutenzione dei pc sia windows che Mac e della gestione del server.
-												Inizialmente l’azienda utilizzava un server Windows e successivamente è stata fatta una migrazione su un server Linux (Ubuntu based) mantenedo garantendo il backup dei dati su un RAID 5 ed un disaster backup all’esterno dell’azienda su un server secondario.
+												• Manutenzione PC Windows e Mac<br>
+												• Migrazione Windows Server -> Linux (debian)<br>
+												• Gestione di backup secondo schema 3-2-1 onsite tramite Raid 5<br>
+												• Backup Off-Site sede cliente in caso disaster recovery<br>
+												• Configurazione applicativi e macchinari specifici in ambito sanitario<br>
 											</p>
 
 										</div>
@@ -664,7 +681,18 @@
 											<h3>
 												Smart Hospital TA - 2009-2010
 											</h3>
-											<p style="text-align: justify;">Per questa azienda ho realizzato un gestionale web based utilizzando javascript e php. Il server aziendale è basato su CentOS con web server Apache, database MySQL e il backup dei dati aziendali viene realizzata su RAID5 </p>
+											<span class="education-company">Sistemista di rete</span>
+
+											<p style="text-align: justify;">
+												• Realizzazione Infrastruttura di rete<br>
+												• Installazione Server Linux (debian based) con web server (apache)<br>
+												• Realizzazione gestionale Web Based<br>
+												• Realizzazione Database MySQL per la gestione degli ordini<br>
+												• Gestione di backup secondo schema 3-2-1 onsite tramite Raid 5<br>
+												• Backup Off-Site sede cliente in caso disaster recovery<br>
+												• Manutenzione PC Windows e Mac<br>
+												• Riparazione PC Windows, Mac e smart devices (Smartphone e Tablet)<br>
+											</p>
 										</div>
 
 									</div>
