--- a/index.html
+++ b/index.html
@@ -610,9 +610,14 @@
 												<span><img width="80" height="80" src="img/Sielte.png" class="wp-post-image" loading="lazy"  /></span>
 											</span>
 											<h3>
-												Sielte S.P.A - 06/2023 - Adesso
+												Sielte S.P.A <br>
+												<span style="font-size: 15px;font-style: oblique;">
+													Giu 2023 - Presente - Full Time
+												</span>
 											</h3>
-											<span class="education-company">Network Operator L2 in consulenza per FastWeb</span>
+
+											<span style="font-size: 18px; font-weight: bold;">Network Operator Secondo Livello</span><br>
+											
 											<p style="text-align: justify;">
 												Gestione ticket ed interventi onsite per clienti small business Fastweb (Operation SME) tramite client Remedy<br>
 												• Configurazione e troubleshooting router Aethra, ADB, Cisco e Huawei<br>
@@ -635,9 +640,12 @@
 												<span><img width="80" height="80" src="img/cds.png" class="wp-post-image" loading="lazy"  /></span>
 											</span>
 											<h3>
-												HP Enterprise Customer Delivery Services - 01/2022 - 06/2023
+												HP Enterprise Customer Delivery Services<br>
+												<span style="font-size: 15px;">
+													Gen 2022 - Giu 2023 - Full Time<br>
+												</span>
 											</h3>
-											<span class="education-company">Infrastructure Support Specialist in consulenza per Intesa San Paolo</span>
+											<span style="font-size: 18px; font-weight: bold;">Infrastructure Support Specialist	</span>
 											<p style="text-align: justify;">
 												Gestione ticket per Intesa San Paolo tramite client Service Now<br>
 												• Configurazione e troubleshooting Cisco UCCE<br>
@@ -660,9 +668,12 @@
 												<span><img width="80" height="80" src="img/Athena.png" class="wp-post-image" loading="lazy"  /></span>
 											</span>
 											<h3>
-												Atena SRL - 2010-2021
+												Atena SRL<br>
+												<span style="font-size: 15px;">
+													2010-2021 - Full Time<br>
+												</span>
 											</h3>
-											<span class="education-company">Sistemista di rete</span>
+											<span style="font-size: 18px; font-weight: bold;">Sistemista di rete</span>
 											<p style="text-align: justify;">
 												• Manutenzione PC Windows e Mac<br>
 												• Migrazione Windows Server -> Linux (debian)<br>
@@ -679,9 +690,12 @@
 												<span><img width="80" height="80" src="img/SmartHospital.png" class="wp-post-image" loading="lazy"  /></span>
 											</span>
 											<h3>
-												Smart Hospital TA - 2009-2010
+												Smart Hospital TA<br>
+												<span style="font-size: 15px;">
+													2009-2010 - Full Time<br>
+												</span>
 											</h3>
-											<span class="education-company">Sistemista di rete</span>
+											<span style="font-size: 18px; font-weight: bold;">Sistemista di rete</span>
 
 											<p style="text-align: justify;">
 												• Realizzazione Infrastruttura di rete<br>
